@@ -26,15 +26,17 @@ sh ${dir}/check-env.sh || { exit 1; }
 #-Djava.library.path=${KYLIN_LD_LIBRARY_PATH} \
 
 
-rm -rf ${tomcat_root}/webapps/*
-cp ${dir}/../lib/kylin-server-*.war ${tomcat_root}/webapps/kylin.war
-
+useSandbox=`cat ${KYLIN_HOME}/conf/kylin.properties | grep 'kylin.sandbox' | awk -F '=' '{print $2}'`
+spring_profile="default"
+if [ "$useSandbox" = "true" ]
+    then spring_profile="sandbox"
+fi
 source ${dir}/find-hive-dependency.sh
 
 export HBASE_CLASSPATH_PREFIX=${tomcat_root}/bin/bootstrap.jar:${tomcat_root}/bin/tomcat-juli.jar:${tomcat_root}/lib/*:$HBASE_CLASSPATH_PREFIX
 export HBASE_CLASSPATH=$hive_dependency:${HBASE_CLASSPATH}
 
-hbase -XX:PermSize=256M -XX:MaxPermSize=512M -Djava.util.logging.config.file=${tomcat_root}/conf/logging.properties \
+hbase -Djava.util.logging.config.file=${tomcat_root}/conf/logging.properties \
 -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
 -Dorg.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true \
 -Dorg.apache.catalina.connector.CoyoteAdapter.ALLOW_BACKSLASH=true \
@@ -43,7 +45,12 @@ hbase -XX:PermSize=256M -XX:MaxPermSize=512M -Djava.util.logging.config.file=${t
 -Dcatalina.home=${tomcat_root} \
 -Djava.io.tmpdir=${tomcat_root}/temp  \
 -Dkylin.hive.dependency=${hive_dependency} \
-org.apache.hadoop.util.RunJar ${tomcat_root}/bin/bootstrap.jar  org.apache.catalina.startup.Bootstrapstart > ${tomcat_root}/logs/kylin_sandbox.log 2>&1 &
-echo "A new Kylin instance is started by $USER, stop it using \"kylin.sh stop\""
-echo "Please visit http://<your_sandbox_ip>:7070/kylin to play with the cubes! (Useranme: ADMIN, Password: KYLIN)"
-echo "You can check the log at ${tomcat_root}/logs/kylin_sandbox.log"
+-Dspring.profiles.active=${spring_profile} \
+org.apache.hadoop.util.RunJar ${tomcat_root}/bin/bootstrap.jar  org.apache.catalina.startup.Bootstrap start > ${tomcat_root}/logs/kylin.log 2>&1 & echo $! > ${KYLIN_HOME}/pid &
+echo "A new Kylin instance is started by $USER, stop it using \"stop-kylin.sh\""
+if [ "$useSandbox" = "true" ]
+    then echo "Please visit http://<your_sandbox_ip>:7070/kylin to play with the cubes! (Useranme: ADMIN, Password: KYLIN)"
+else
+    echo "Please visit http://<ip>:7070/kylin"
+fi
+echo "You can check the log at ${tomcat_root}/logs/kylin.log"
